testsuite/poke.pkl/cast-diag-3.pk
/* { dg-do compile } */

defvar v = 10 as any; /* { dg-error "" } */
